# gitsift

./: .gitignore  Cargo.toml  Cross.toml  LICENSE  README.md  clippy.toml  install.sh
.github/workflows/: ci.yml  release.yml
skills/gitsift-staging/: SKILL.md
src/: cli.rs  main.rs  models.rs  output.rs  protocol.rs  toon.rs
src/git/: checkout.rs  diff.rs  mod.rs  stage.rs  status.rs
tests/: cli.rs  edge_cases.rs  protocol.rs
tests/common/: mod.rs
