[package]
name = "gitsift"
version = "0.1.0"
edition = "2024"
description = "Git hunk sifter for code agents"
license = "MIT"

[dependencies]
git2       = "0.19"
clap       = { version = "4", features = ["derive"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow     = "1"
similar    = { version = "2", features = ["text"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile   = "3"
