[package]
name = "gitsift"
version = "0.1.0"
edition = "2024"
description = "Git hunk sifter for code agents"
license = "MIT"

[features]
vendored-openssl = ["openssl-sys"]

[dependencies]
git2        = "0.19"
openssl-sys = { version = "0.9", features = ["vendored"], optional = true }
clap        = { version = "4", features = ["derive"] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
anyhow      = "1"
similar     = { version = "2", features = ["text"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile   = "3"
