[package]
name = "gitsift"
version = "0.1.3"
edition = "2024"
description = "Git hunk sifter for code agents"
license = "MIT"

[features]
vendored-openssl = ["openssl-sys"]

[dependencies]
git2        = "0.19"
openssl-sys = { version = "0.9", features = ["vendored"], optional = true }
clap        = { version = "4", features = ["derive"] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
anyhow      = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile   = "3"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
# Re-allow noisy pedantic lints
module_name_repetitions = "allow"
missing_errors_doc      = "allow"
must_use_candidate      = "allow"
missing_panics_doc      = "allow"
similar_names           = "allow"
unnecessary_wraps       = "allow"
# Enforce specific lints
cloned_instead_of_copied          = "deny"
redundant_closure_for_method_calls = "deny"
unnested_or_patterns              = "deny"
